tree-sitter/test/corpus/optional.txt
==================
optionals
==================

let name: Str? = optional.new()
mut age: Int? = 25

---

(program
  (statement
    (variable_definition
      (variable_binding)
      (identifier)
      (type
        (primitive_type
          (str)))
      (assign)
      (expression
        (member_access
          (expression
            (identifier))
          (period)
          (function_call
            (identifier)
            (paren_arguments))))))
  (statement
    (variable_definition
      (variable_binding)
      (identifier)
      (type
        (primitive_type
          (int)))
      (assign)
      (expression
        (primitive_value
          (number))))))
